--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,12 +37,6 @@ a {
   color: green;
 }
 
-.container {
-  max-height: 300px; /* Set your desired maximum height */
-  overflow-y: auto; /* Enable vertical scrolling when content overflows */
-}
-
-
 /* Popup container */
 .popup {
   position: fixed;
@@ -59,33 +53,21 @@ a {
 
 /* Popup content */
 .popup-content {
+  width: 400px;
   background-color: rgb(45, 34, 70);
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   text-align: center;
-  color:rgb(255, 255, 255)
-}
-
-/* Close button */
-.popup-content button {
-  background-color: #eab308;
-  color: white;
-  border: none;
-  padding: 8px 16px;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-top: 25px;
+  color: rgb(255, 255, 255)
 }
 
 /* Close button on hover */
-.popup-content button:hover {
-  background-color: #c46603;
-}
 
 .parent-container {
   position: relative;
-  z-index: 11; /* Ensure the parent container has a higher z-index than other elements */
+  z-index: 11;
+  /* Ensure the parent container has a higher z-index than other elements */
 }
 
 .custom-border {
@@ -93,8 +75,3 @@ a {
 }
 
 /* styles.css */
-.connect-wallet-button {
-  background-color: red; /* Change this to your desired background color */
-  color: white; /* Change the text color to white using !important to override any conflicting styles */
-  /* Add any other desired styles */
-}
